--- a/AsosCodingStyle.Web/Scripts/components/testContactForm/testContactForm.html
+++ b/AsosCodingStyle.Web/Scripts/components/testContactForm/testContactForm.html
@@ -1,15 +1,26 @@
-﻿<h1>Test Contact form</h1>
-
-<label for="FirstName">First name:</label>
-<input id="FirstName" data-bind="textInput: firstName"/><br/>
-
-<label for="LastName">Last name:</label>
-<input id="LastName" data-bind="textInput: lastName"/><br/>
+﻿<h3>Test Contact form</h3>
 
 <!-- ko if: isShowFullName -->
-Hi, <span data-bind="text: fullName"></span>
+<span class="text-primary">Hi, <span data-bind="text: fullName"></span></span>
 <!-- /ko -->
-
 <!-- ko ifnot: isShowFullName -->
-Please enter your name...
-<!-- /ko -->
+<span class="text-warning">Please enter your name...</span>
+    <!-- /ko -->
+
+    <form class="form-horizontal">
+        <div class="form-group">
+            <label for="FirstName" class="col-lg-3 control-label">First name:</label>
+            <div class="col-lg-6">
+                <input id="FirstName" data-bind="textInput: firstName" class="form-control" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="LastName" class="col-lg-3 control-label">Last name:</label>
+            <div class="col-lg-6">
+                <input id="LastName" data-bind="textInput: lastName" class="form-control" />
+            </div>
+        </div>
+    </form>
+
+
