Some more client side dev

--- a/AsosCodingStyle.Web/Scripts/components/orderItem/orderItem.html
+++ b/AsosCodingStyle.Web/Scripts/components/orderItem/orderItem.html
@@ -32,7 +32,7 @@
     <!-- ko if: isShowReturnsFeedback -->
     <div class="row">
         <div class="col-lg-1">
-            <!-- ko foreach: returnsFeedback -->
+            <!-- ko foreach: returnReasons -->
             <textarea />
             <!-- /ko -->
         </div>
