Finish order items with styling changes. Included font-awesome.

--- a/AsosCodingStyle.Web/Scripts/components/orderItem/orderItem.html
+++ b/AsosCodingStyle.Web/Scripts/components/orderItem/orderItem.html
@@ -1,16 +1,16 @@
 ﻿<div class="order-item">
     <div class="row">
         <div class="col-lg-2">
-            <img data-bind="attr: { src: orderItem.Product.ImageUrl }" class="img-responsive" />
+            <img data-bind="attr: { src: orderItem.Product.ImageUrl }" class="img-responsive product-image" />
         </div>
         <div class="col-lg-10">
             <h3 data-bind="text: orderItem.Product.Description"></h3>
-            <p>
+            <p class="order-item-summary">
                 <span data-bind="text: getSummary()"></span><br />
                 <span data-bind="text: '£' + orderItem.Price.toFixed(2)"></span>
             </p>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
+            <div class="row feedback-type-buttons">
+                <div class="col-lg-4 col-lg-offset-1">
                     <button data-bind="click: selectPositiveFeedback, css: { 'btn-success': feedbackMethod() === 'POSITIVE' }" class="btn btn-block btn-success-on-hover">I love it!</button>
                 </div>
                 <div class="col-lg-4">
@@ -23,11 +23,9 @@
     <div class="row">
         <div class="col-lg-3"></div>
         <!-- ko foreach: positiveFeedbackTypes -->
-        <div class="col-lg-2">
-            <button data-bind="click: $parent.toggleFeedbackType.bind($parent), css: { 'btn-success': $parent.isFeedbackTypeSelected.call($parent, $data) }"
-                    class="btn btn-block btn-success-on-hover">
-                <span data-bind="text: $data.text"></span>
-            </button>
+        <div class="col-lg-2 text-success-on-hover text-center" data-bind="click: $parent.toggleFeedbackType.bind($parent), css: { 'text-success': $parent.isFeedbackTypeSelected.call($parent, $data) }">
+            <i data-bind="attr: { 'class': 'fa fa-3x fa-' + $data.iconClass }"></i>
+            <p data-bind="text: $data.text"></p>
         </div>
         <!-- /ko -->
     </div>
@@ -36,11 +34,9 @@
     <div class="row">
         <div class="col-lg-1"></div>
         <!-- ko foreach: returnReasons -->
-        <div class="col-lg-2">
-            <button data-bind="click: $parent.selectReturnReason.bind($parent), css: { 'btn-warning': $parent.isReturnReasonSelected.call($parent, $data) }"
-                    class="btn btn-block btn-warning-on-hover">
-                <span data-bind="text: $data.text"></span>
-            </button>
+        <div class="col-lg-2 text-warning-on-hover text-center" data-bind="click: $parent.selectReturnReason.bind($parent), css: { 'text-warning': $parent.isReturnReasonSelected.call($parent, $data) }">
+            <i data-bind="attr: { 'class': 'fa fa-3x fa-' + $data.iconClass }"></i>
+            <p data-bind="text: $data.text"></p>
         </div>
         <!-- /ko -->
     </div>
