--- a/AsosCodingStyle.Web/Styles/bootstrap.css
+++ b/AsosCodingStyle.Web/Styles/bootstrap.css
@@ -6811,22 +6811,27 @@ button.close {
 body {
   -webkit-font-smoothing: antialiased;
 }
+.text-primary-on-hover:hover,
 .text-primary,
 .text-primary:hover {
   color: #2780e3;
 }
+.text-success-on-hover:hover,
 .text-success,
 .text-success:hover {
   color: #3fb618;
 }
+.text-danger-on-hover:hover,
 .text-danger,
 .text-danger:hover {
   color: #ff0039;
 }
+.text-warning-on-hover:hover,
 .text-warning,
 .text-warning:hover {
   color: #ff7518;
 }
+.text-info-on-hover:hover,
 .text-info,
 .text-info:hover {
   color: #9954bb;
