--- a/AsosCodingStyle.Web/Scripts/components/dropOffPoint/dropOffPoint.html
+++ b/AsosCodingStyle.Web/Scripts/components/dropOffPoint/dropOffPoint.html
@@ -1,1 +1,55 @@
 ﻿<h3>Find a drop-off point</h3>
+<div class="row">
+    <div class="col-lg-12">
+        <input type="text" data-bind="textInput: dropOffPointPostcode, event: { keyup: postCodeKeyUp.bind($data) }" placeholder="Enter your postcode" />
+        &nbsp;OR&nbsp;
+        <button data-bind="click: useMyLocation">Use my location</button>
+    </div>
+</div>
+<!-- ko if: dropOffDetails() !== null -->
+<div class="row">
+    <div class="col-lg-6">
+        Your nearest drop-off point is:<br />
+        <br />
+        <span data-bind="text: dropOffDetails().Address.AddressLine1"></span><br />
+        <span data-bind="text: dropOffDetails().Address.AddressLine2"></span><br />
+        <span data-bind="text: dropOffDetails().Address.City"></span><br />
+        <span data-bind="text: dropOffDetails().Address.PostCode"></span><br />
+        <br />
+        <span data-bind="text: dropOffDetails().OpeningTimes[0]"></span><br />
+        <span data-bind="text: dropOffDetails().OpeningTimes[1]"></span><br />
+        <span data-bind="text: dropOffDetails().OpeningTimes[2]"></span>
+    </div>
+    <div class="col-lg-6">
+        <img data-bind="attr: {src: dropOffDetails().MapUrl}" class="img-responsive" />
+    </div>
+</div>
+<div class="row form-group">
+    <div class="col-lg-12">
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" data-bind="checked: isLocationReminderSelected"> Remind me when I'm near the collection point
+            </label>
+        </div>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" data-bind="checked: isTimeReminderSelected"> Remind me a week before the returns deadline if my return has not been received
+            </label>
+        </div>
+        <!-- ko if: isTimeReminderSelected -->
+        I want to be reminded by:<br />
+        <div class="row">
+            <div class="col-lg-2">
+                <label><input type="checkbox" data-bind="checked: isCalendarReminderSelected"> Calendar</label>
+            </div>
+            <div class="col-lg-2">
+                <label><input type="checkbox" data-bind="checked: isEmailReminderSelected"> Email</label>
+            </div>
+            <div class="col-lg-2">
+                <label><input type="checkbox" data-bind="checked: isMobileReminderSelected"> Mobile</label>
+            </div>
+        </div>
+        <!-- /ko -->
+    </div>
+</div>
+<!-- /ko -->
