--- a/AsosCodingStyle.Web/Scripts/components/order/order.html
+++ b/AsosCodingStyle.Web/Scripts/components/order/order.html
@@ -1,11 +1,19 @@
 ﻿<h1>Order items</h1>
 
-<!-- ko foreach: orderItems -->
-<!-- ko component: {name: 'orderItem', params: {data: $data} }--><!-- /ko -->
-<!-- /ko -->
+<!-- ko ifnot: hasLoaded -->
+<span class="loading"></span>
+<!-- /ko-->
 
-<!-- ko if: isReturningItems -->
-<span data-bind="text: returnSummaryText"></span>
+<!-- ko if: hasLoaded -->
 
-<!-- ko component: 'returnsMethod' --><!-- /ko -->
+    <!-- ko foreach: orderItems -->
+    <!-- ko component: {name: 'orderItem', params: {data: $data} }--><!-- /ko -->
+    <!-- /ko -->
+
+    <!-- ko if: isReturningItems -->
+    <span data-bind="text: returnSummaryText"></span>
+
+    <!-- ko component: 'returnsMethod' --><!-- /ko -->
+    <!-- /ko -->
+
 <!-- /ko -->
