--- a/AsosCodingStyle.Web/Scripts/components/order/order.html
+++ b/AsosCodingStyle.Web/Scripts/components/order/order.html
@@ -8,4 +8,7 @@
 <span data-bind="text: returnSummaryText"></span>
 
 <!-- ko component: 'returnsMethod' --><!-- /ko -->
+
 <!-- /ko -->
+
+<!-- ko component: 'packingHelper' --><!-- /ko -->
