Moved component into plain html -> order file

--- a/AsosCodingStyle.Web/Scripts/components/order/order.html
+++ b/AsosCodingStyle.Web/Scripts/components/order/order.html
@@ -19,6 +19,15 @@
 
 <!-- /ko -->
 
-<!-- ko component: 'packingHelper' --><!-- /ko -->
+<div class="panel panel-default">
+    <div class="panel-heading">Packing Details - Things to check when packing your return:</div>
+    <div class="panel-body">
+        <p class="">Products are in the box</p>
+
+        <p class="">The box is sealed</p>
+
+        <p class="">Blah blah blah</p>
+    </div>
+</div>
 
 
