--- a/AsosCodingStyle.Web/Styles/site.css
+++ b/AsosCodingStyle.Web/Styles/site.css
@@ -5,8 +5,8 @@
     margin-bottom: 10px;
 }
 
-.order-item .product-image {
-    margin-bottom: 20px;
+.order-item .feedback-row {
+    margin-top: 20px;
 }
 
 .order-item .order-item-summary {
@@ -15,4 +15,28 @@
 
 .order-item .feedback-type-buttons button {
     font-size: 1.3em;
+}
+
+.loading-indicator {
+    margin-top: 100px;
+}
+
+.returns-method-icon {
+    margin-top: 5px;
+}
+
+body {
+    padding-bottom: 50px;
+}
+
+.returns-method .collection,
+.returns-method .drop-off-point {
+    border: 4px solid #fafafa;
+    background-color: #fcfcfc;
+    padding: 10px;
+}
+
+.returns-method .collection h3,
+.returns-method .drop-off-point h3 {
+    margin-top: 10px;
 }
