--- a/AsosCodingStyle.Web/Scripts/components/dropOffPoint/dropOffPoint.html
+++ b/AsosCodingStyle.Web/Scripts/components/dropOffPoint/dropOffPoint.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 <!-- ko if: dropOffDetails() !== null -->
-<div class="row">
+<div class="row drop-off-details">
     <div class="col-lg-6">
         Your nearest drop-off point is:<br />
         <br />
