--- a/AsosCodingStyle.Web/Scripts/components/packingDetails/packingDetails.html
+++ b/AsosCodingStyle.Web/Scripts/components/packingDetails/packingDetails.html
@@ -1,10 +1,9 @@
-﻿<div class="panel panel-default">
-    <div class="panel-heading">Packing Details - Things to check when packing your return:</div>
-    <div class="panel-body">
-        <p class="">Products are in the box</p>
-
-        <p class="">The box is sealed</p>
-
-        <p class="">Blah blah blah</p>
-    </div>
+﻿<h3>Things you need to do now</h3>
+<div class="row">
+    <div class="col-lg-3">Label on the box</div>
+    <div class="col-lg-3">Products are in the box</div>
+    <div class="col-lg-3">The box is sealed</div>
+    <!-- ko if: isDropOffPointSelected -->
+    <div class="col-lg-3">Take to drop-off point</div>
+    <!-- /ko -->
 </div>
