--- a/AsosCodingStyle.Web/Styles/site.css
+++ b/AsosCodingStyle.Web/Styles/site.css
@@ -26,7 +26,7 @@
 }
 
 body {
-    padding-bottom: 50px;
+    padding-bottom: 100px;
 }
 
 .returns-method .collection,
@@ -41,6 +41,27 @@ body {
     margin-top: 10px;
 }
 
-.drop-off-details {
-    margin-top: 20px;
+.reminder-options label {
+    font-weight: normal !important;
+}
+
+.drop-off-point-options,
+.collection-options {
+    margin-bottom: 20px;
+}
+
+.submit-button {
+    margin-top: 60px;
+}
+
+.warning-border {
+    border-color: #ff7518 !important;
+}
+
+.success-border {
+    border-color: #3fb618 !important;
+}
+
+.greyed-out-text {
+    color: #cccccc !important;
 }
