--- a/AsosCodingStyle.Web/Views/Notifications/Index.cshtml
+++ b/AsosCodingStyle.Web/Views/Notifications/Index.cshtml
@@ -6,3 +6,6 @@
 <h2>Index</h2>
 
 @Html.ActionLink("Send return received message", "SendReturnReceivedMessage")
+<br/>
+@Html.ActionLink("Send payment made message", "SendPaymentMadeMessage")
+
