--- a/AsosCodingStyle.Web/Scripts/components/order/order.html
+++ b/AsosCodingStyle.Web/Scripts/components/order/order.html
@@ -12,7 +12,9 @@
     <!-- ko component: 'returnsMethod' --><!-- /ko -->
     <!-- /ko -->
 
-    <!-- ko if: isShowSubmitButton -->
+<!-- ko component: 'notifications' --><!-- /ko -->
+
+<!-- ko if: isShowSubmitButton -->
     <div class="row submit-button">
         <div class="col-lg-4 col-lg-offset-4">
             <button data-bind="click: submit" class="btn btn-warning btn-lg btn-block">Submit</button>
