Initial pass of mobile styling

--- a/AsosCodingStyle.Web/Scripts/components/packingDetails/packingDetails.html
+++ b/AsosCodingStyle.Web/Scripts/components/packingDetails/packingDetails.html
@@ -6,26 +6,26 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-3 text-center">
+    <div class="col-lg-3 col-xs-8 col-lg-offset-0 col-xs-offset-2 text-center">
         <i class="fa fa-4x fa-tag"></i>
         <h4>Stick the label on the box</h4>
         <p>The returns label lets our customer service representative know that this box belongs to a very special person.</p>
         <p>When they scan this label, they know what to expect in the box before they even open the box, so we can process the returns and refund you faster.</p>
     </div>
-    <div class="col-lg-3 text-center">
+    <div class="col-lg-3 col-xs-8 col-lg-offset-0 col-xs-offset-2 text-center">
         <i class="fa fa-4x fa-dropbox"></i>
         <h4>Put the items in the box</h4>
         <p>Remember to place all the items you want to return inside your box.</p>
         <p>Please make sure items are in resaleable condition and have their original tags attached. We might reject items that are no longer in a resaleable condition.</p>
     </div>
-    <div class="col-lg-3 text-center">
+    <div class="col-lg-3 col-xs-8 col-lg-offset-0 col-xs-offset-2 text-center">
         <i class="fa fa-4x fa-archive"></i>
         <h4>Tape up the box</h4>
         <p>Couriers work magic and can get your parcel, and 1000s of others, from one side of the country to another overnight.</p>
         <p>Make sure your box is sealed properly to avoid the contents falling out and getting lost or mixed up with the contents of other boxes in transit.</p>
     </div>
     <!-- ko if: isDropOffPointSelected -->
-    <div class="col-lg-3 text-center">
+    <div class="col-lg-3 col-xs-8 col-lg-offset-0 col-xs-offset-2 text-center">
         <i class="fa fa-4x fa-flag-o"></i>
         <h4>Take the box to the drop-off</h4>
         <p>Whether you're on your way home from work or on the way to buy your evening groceries, there are plenty of drop-off points available.</p>
