--- a/AsosCodingStyle.Web/Scripts/components/returnsMethod/returnsMethod.html
+++ b/AsosCodingStyle.Web/Scripts/components/returnsMethod/returnsMethod.html
@@ -4,10 +4,10 @@
         <div class="col-lg-6">
             <div class="drop-off-point" data-bind="css: {'success-border': isDropOffPointSelected, 'greyed-out-text': isCollectionSelected}">
                 <div class="row text-success-on-hover" data-bind="click: selectDropOffPoint, css: {'text-success': isDropOffPointSelected}">
-                    <div class="col-lg-2 col-lg-offset-2 returns-method-icon">
+                    <div class="col-xs-2 col-xs-offset-2 returns-method-icon">
                         <i class="fa fa-3x fa-flag-o"></i>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-xs-8">
                         <h3>Drop-off point</h3>
                     </div>
                 </div>
@@ -16,10 +16,10 @@
         <div class="col-lg-6">
             <div class="collection" data-bind="css: {'success-border': isCollectionSelected, 'greyed-out-text': isDropOffPointSelected}">
                 <div class="row text-success-on-hover" data-bind="click: selectCollection, css: {'text-success': isCollectionSelected}">
-                    <div class="col-lg-2 col-lg-offset-2 returns-method-icon">
+                    <div class="col-xs-2 col-xs-offset-2 returns-method-icon">
                         <i class="fa fa-3x fa-truck"></i>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-xs-8">
                         <h3>Book a collection</h3>
                     </div>
                 </div>
