--- a/asos.codingstyle.android/app/src/main/res/layout/activity_scan_barcode.xml
+++ b/asos.codingstyle.android/app/src/main/res/layout/activity_scan_barcode.xml
@@ -1,9 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.asos.codingstyle.asoscodingstyle.ScanBarcodeActivity">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/topLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:keepScreenOn="true"
+    android:orientation="vertical"
+    tools:context=".multitracker.MultiTrackerActivity">
 
-</RelativeLayout>
+    <com.asos.codingstyle.asoscodingstyle.multitracker.ui.camera.CameraSourcePreview
+        android:id="@+id/preview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.asos.codingstyle.asoscodingstyle.multitracker.ui.camera.GraphicOverlay
+            android:id="@+id/faceOverlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </com.asos.codingstyle.asoscodingstyle.multitracker.ui.camera.CameraSourcePreview>
+
+</LinearLayout>
+
